fix: scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -117,8 +117,28 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    height: 100dvh;
+    height: 100vh; /* fallback for older browsers */
+  }
   body {
     @apply bg-background text-foreground;
     font-family: var(--font-montserrat), sans-serif;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    min-width: 320px;
+    height: 100dvh;
+    height: 100vh; /* fallback for older browsers */
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+  #__next {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
